@startuml
class Car {
    - String _id
    - String _model
    - String _brand
    + Car(id: String, model: String, brand: String)
    + String getId()
    + String getModel()
    + String getBrand()
}

class CarFormatter {
    + String carToString(car: Car): String
    + String getAllCarNames(): String
}

class CarDB {
    - static List<Car> _carsDB
    + Car getFromDb(carId: String): Car
}

class CarComparer {
    + Car compareCar(c1: Car, c2: Car): Car
    + Car getBestCar(): Car
}

CarFormatter --|> Car : Uses
CarDB --|> Car : Uses
CarComparer --|> Car : Uses
@enduml
